# tic-tac-toe

./: CMakeLists.txt  README.md  doxyfile.in
include/: board.hpp  computer.hpp  game.hpp
src/: board.cpp  game.cpp  main.cpp
src/game/: board.cpp  computer.cpp
tests/: test_board.cpp
